--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -60,5 +60,6 @@
 	<script type="text/javascript" src="app/controllers/page-not-found.js"></script>
 	<script type="text/javascript" src="app/controllers/access-denied.js"></script>
 	<script type="text/javascript" src="app/controllers/register.js"></script>
+	<script type="text/javascript" src="app/module/angular-messages/angular-messages.js"></script>
 </body>
 </html>
