--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,6 +9,8 @@
 <!-- importing the bootstrap styles -->
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet"
+		  href="app/css/common.css">
 </head>
 
 <style>
@@ -60,6 +62,6 @@
 	<script type="text/javascript" src="app/controllers/page-not-found.js"></script>
 	<script type="text/javascript" src="app/controllers/access-denied.js"></script>
 	<script type="text/javascript" src="app/controllers/register.js"></script>
-	<script type="text/javascript" src="app/module/angular-messages/angular-messages.js"></script>
+	<!--<script type="text/javascript" src="app/module/angular-messages/angular-messages.js"></script>-->
 </body>
 </html>
