--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -53,9 +53,16 @@
 		src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
 
 
+
+	<script src="app/js/angular-animate.min.js"></script>
 	<script src="app/js/angular-animate.min.js"></script>
 	<script src="app/js/angular-aria.min.js"></script>
 	<script src="app/js/angular-material.min.js"></script>
+	<!--file upload-->
+	<script src="app/js/ng-file-upload.js"></script>
+	<script src="app/js/ng-file-upload-shim.js"></script>
+	<script src="app/js/angular-file-upload-shim.js"></script>
+	<script src="app/js/angular-file-upload.js"></script>
 
 	<!-- Angular Material Fileinput -->
 	<script src="app/js/lf-ng-md-file-input.js"></script>
