--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>JWT Demo</title>
 
+	<link rel="stylesheet" href="app/css/style.css">
+
 	<!-- Angular Material Dependencies -->
 	<link rel="stylesheet" href="app/css/angular-material.min.css">
 
