--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -66,7 +66,7 @@
 
 	<!-- Angular Material Fileinput -->
 	<script src="app/js/lf-ng-md-file-input.js"></script>
-
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.1/angular-cookies.min.js"></script>
 	<!-- Including jquery and twitter bootstrap -->
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
