--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,6 +24,7 @@
 		  href="app/css/dropify.css">
 
 	<link rel="stylesheet" href="app/css/lf-ng-md-file-input.css">
+	<link href="app/css/angular-tooltips.min.css" rel="stylesheet" type="text/css" />
 </head>
 
 <style>
@@ -51,7 +52,9 @@
 		src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
-
+<!--tooltip-->
+	<script data-require="angular-touch@1.5.*" data-semver="1.5.8" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-touch.js"></script>
+	<script data-require="ui-bootstrap@2.1.3" data-semver="2.1.3" src="https://cdn.rawgit.com/angular-ui/bootstrap/gh-pages/ui-bootstrap-tpls-2.1.3.js"></script>
 
 
 	<script src="app/js/angular-animate.min.js"></script>
@@ -63,6 +66,8 @@
 	<script src="app/js/ng-file-upload-shim.js"></script>
 	<script src="app/js/angular-file-upload-shim.js"></script>
 	<script src="app/js/angular-file-upload.js"></script>
+
+	<script src="app/js/angular-tooltips.min.js"></script>
 
 	<!-- Angular Material Fileinput -->
 	<script src="app/js/lf-ng-md-file-input.js"></script>
