--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,8 @@
 
 	<link rel="stylesheet" href="app/css/lf-ng-md-file-input.css">
 	<link href="app/css/angular-tooltips.min.css" rel="stylesheet" type="text/css" />
+
+	<base href="/">
 </head>
 
 <style>
